--- a/PerformanceRatingSystem.WebMVC/Views/ActualPerformanceResults/Create.cshtml
+++ b/PerformanceRatingSystem.WebMVC/Views/ActualPerformanceResults/Create.cshtml
@@ -21,13 +21,13 @@
 
             <div class="form-group">
                 <label asp-for="Value" class="control-label"></label>
-                <input asp-for="Value" class="form-control" />
+                <input asp-for="Value" class="form-control" min="0.01" step="0.01" />
                 <span asp-validation-for="Value" class="text-danger"></span>
             </div>
 
             <div class="form-group">
                 <label asp-for="Year" class="control-label"></label>
-                <input asp-for="Year" class="form-control" />
+                <input asp-for="Year" class="form-control" min="1900" max="9999" />
                 <span asp-validation-for="Year" class="text-danger"></span>
             </div>
 
