--- a/PerformanceRatingSystem.WebMVC/Views/PlannedPerformanceValues/Edit.cshtml
+++ b/PerformanceRatingSystem.WebMVC/Views/PlannedPerformanceValues/Edit.cshtml
@@ -22,13 +22,13 @@
 
     <div class="form-group">
         <label asp-for="Value" class="control-label col-md-2">Значение</label>
-        <input type="number" asp-for="Value" class="form-control" step="0.01" />
+        <input type="number" asp-for="Value" class="form-control" min="0.01" step="0.01" />
         <span asp-validation-for="Value" class="text-danger"></span>
     </div>
 
     <div class="form-group">
         <label asp-for="Year" class="control-label col-md-2">Год</label>
-        <input type="number" asp-for="Year" class="form-control" />
+        <input type="number" asp-for="Year" class="form-control" min="1900" max="9999" />
         <span asp-validation-for="Year" class="text-danger"></span>
     </div>
 
