--- a/PerformanceRatingSystem.WebMVC/Views/ActualPerformanceResults/Index.cshtml
+++ b/PerformanceRatingSystem.WebMVC/Views/ActualPerformanceResults/Index.cshtml
@@ -1,10 +1,38 @@
-﻿@model IEnumerable<PerformanceRatingSystem.Application.Dtos.ActualPerformanceResultDto>
+﻿@model PerformanceRatingSystem.Domain.RequestFeatures.PagedList<PerformanceRatingSystem.Application.Dtos.ActualPerformanceResultDto>
 @{
     Layout = "_Layout";
 }
 
 <h2>Результаты фактической производительности</h2>
-
+<form method="get">
+    <div class="form-row align-items-end">
+        <div class="col-auto">
+            <label for="searchQuarter">Квартал</label>
+            <select id="searchQuarter" name="searchQuarter" class="form-control" value="@ViewData["SearchQuarter"]">
+                <option value="">-- Выберите квартал --</option>
+                <option value="1">январь-март</option>
+                <option value="2">апрель-июль</option>
+                <option value="3">август-октябрь</option>
+                <option value="4">ноябрь-декабрь</option>
+            </select>
+        </div>
+        <div class="col-auto">
+            <label for="searchYear">Год</label>
+            <input type="number" id="searchYear" name="searchYear" value="@ViewData["SearchYear"]" class="form-control" min="1900" max="9999" placeholder="Год">
+        </div>
+        <div class="col-auto">
+            <label for="searchDepartment">Отдел</label>
+            <select id="searchDepartment" name="searchDepartment" value="@ViewData["SearchDepartment"]" class="form-control" asp-items="ViewBag.DepartmentId">
+                <option value="">-- Выберите отдел --</option>
+            </select>
+        </div>
+        <br />
+        <div class="col-auto">
+            <button type="submit" class="btn btn-secondary">Найти</button>
+        </div>
+    </div>
+</form>
+<br />
 <a class="btn btn-primary" asp-controller="ActualPerformanceResults" asp-action="Create">Создать новый результат</a>
 <table class="table">
     <thead>
@@ -32,3 +60,49 @@
         }
     </tbody>
 </table>
+<div class="pagination">
+    @if (Model.MetaData.HasPrevious)
+    {
+        <a class="btn btn-primary" asp-action="Index" asp-route-PageNumber="@(Model.MetaData.CurrentPage - 1)" asp-route-searchDepartment="@ViewData["SearchDepartment"]" asp-route-searchQuarter="@ViewData["SearchQuarter"]" asp-route-searchYear="@ViewData["SearchYear"]">Назад</a>
+    }
+
+    @if (Model.MetaData.CurrentPage > 3)
+    {
+        <a class="btn btn-primary" asp-action="Index" asp-route-PageNumber="1" asp-route-searchDepartment="@ViewData["SearchDepartment"]" asp-route-searchQuarter="@ViewData["SearchQuarter"]" asp-route-searchYear="@ViewData["SearchYear"]">1</a>
+        @if (Model.MetaData.CurrentPage > 4)
+        {
+            <span>...</span>
+        }
+    }
+
+    @{
+        var startPage = Math.Max(2, Model.MetaData.CurrentPage - 2);
+        var endPage = Math.Min(Model.MetaData.CurrentPage + 2, Model.MetaData.TotalPages - 1);
+    }
+
+    @for (int i = startPage; i <= endPage; i++)
+    {
+        if (i == Model.MetaData.CurrentPage)
+        {
+            <span class="btn btn-secondary disabled">@i</span>
+        }
+        else
+        {
+            <a class="btn btn-primary" asp-action="Index" asp-route-PageNumber="@i" asp-route-searchDepartment="@ViewData["SearchDepartment"]" asp-route-searchQuarter="@ViewData["SearchQuarter"]" asp-route-searchYear="@ViewData["SearchYear"]">@i</a>
+        }
+    }
+
+    @if (Model.MetaData.CurrentPage < Model.MetaData.TotalPages - 2)
+    {
+        @if (Model.MetaData.CurrentPage < Model.MetaData.TotalPages - 3)
+        {
+            <span>...</span>
+        }
+        <a class="btn btn-primary" asp-action="Index" asp-route-PageNumber="@Model.MetaData.TotalPages" asp-route-searchDepartment="@ViewData["SearchDepartment"]" asp-route-searchQuarter="@ViewData["SearchQuarter"]" asp-route-searchYear="@ViewData["SearchYear"]">@Model.MetaData.TotalPages</a>
+    }
+
+    @if (Model.MetaData.HasNext)
+    {
+        <a class="btn btn-primary" asp-action="Index" asp-route-PageNumber="@(Model.MetaData.CurrentPage + 1)" asp-route-searchDepartment="@ViewData["SearchDepartment"]" asp-route-searchQuarter="@ViewData["SearchQuarter"]" asp-route-searchYear="@ViewData["SearchYear"]">Вперед</a>
+    }
+</div>
