--- a/PerformanceRatingSystem.WebMVC/Views/Departments/Index.cshtml
+++ b/PerformanceRatingSystem.WebMVC/Views/Departments/Index.cshtml
@@ -1,9 +1,21 @@
-﻿@model IEnumerable<PerformanceRatingSystem.Application.Dtos.DepartmentDto>
+﻿@model PerformanceRatingSystem.Domain.RequestFeatures.PagedList<PerformanceRatingSystem.Application.Dtos.DepartmentDto>
 @{
     Layout = "_Layout";
 }
 
 <h2>Отделы</h2>
+<form method="get">
+    <div class="form-row align-items-end">
+        <div class="col-auto">
+            <label for="searchName">Название</label>
+            <input type="text" id="searchName" name="searchName" class="form-control" />
+        </div>
+        <br />
+        <div class="col-auto">
+            <button type="submit" class="btn btn-secondary">Найти</button>
+        </div>
+    </div>
+</form>
 <a class="btn btn-primary" asp-controller="Departments" asp-action="Create">Создать новый отдел</a>
 
 <table class="table">
@@ -26,4 +38,49 @@
         }
     </tbody>
 </table>
+<div class="pagination">
+    @if (Model.MetaData.HasPrevious)
+    {
+        <a class="btn btn-primary" asp-action="Index" asp-route-PageNumber="@(Model.MetaData.CurrentPage - 1)" asp-route-searchName="@ViewData["SearchName"]">Назад</a>
+    }
 
+    @if (Model.MetaData.CurrentPage > 3)
+    {
+        <a class="btn btn-primary" asp-action="Index" asp-route-PageNumber="1" asp-route-searchName="@ViewData["SearchName"]">1</a>
+        @if (Model.MetaData.CurrentPage > 4)
+        {
+            <span>...</span>
+        }
+    }
+
+    @{
+        var startPage = Math.Max(2, Model.MetaData.CurrentPage - 2);
+        var endPage = Math.Min(Model.MetaData.CurrentPage + 2, Model.MetaData.TotalPages - 1);
+    }
+
+    @for (int i = startPage; i <= endPage; i++)
+    {
+        if (i == Model.MetaData.CurrentPage)
+        {
+            <span class="btn btn-secondary disabled">@i</span>
+        }
+        else
+        {
+            <a class="btn btn-primary" asp-action="Index" asp-route-PageNumber="@i" asp-route-searchName="@ViewData["SearchName"]">@i</a>
+        }
+    }
+
+    @if (Model.MetaData.CurrentPage < Model.MetaData.TotalPages - 2)
+    {
+        @if (Model.MetaData.CurrentPage < Model.MetaData.TotalPages - 3)
+        {
+            <span>...</span>
+        }
+        <a class="btn btn-primary" asp-action="Index" asp-route-PageNumber="@Model.MetaData.TotalPages" asp-route-searchName="@ViewData["SearchName"]">@Model.MetaData.TotalPages</a>
+    }
+
+    @if (Model.MetaData.HasNext)
+    {
+        <a class="btn btn-primary" asp-action="Index" asp-route-PageNumber="@(Model.MetaData.CurrentPage + 1)" asp-route-searchName="@ViewData["SearchName"]">Вперед</a>
+    }
+</div>
