--- a/PerformanceRatingSystem.WebMVC/Views/Employees/Index.cshtml
+++ b/PerformanceRatingSystem.WebMVC/Views/Employees/Index.cshtml
@@ -1,10 +1,20 @@
-﻿@model IEnumerable<PerformanceRatingSystem.Application.Dtos.EmployeeDto>
+﻿@model PerformanceRatingSystem.Domain.RequestFeatures.PagedList<PerformanceRatingSystem.Application.Dtos.EmployeeDto>
 @{
     Layout = "_Layout";
 }
 
 <h2>Сотрудники</h2>
-
+<form method="get">
+    <div class="form-row align-items-end">
+        <div class="col-auto">
+            <label for="searchPosition">Должность</label>
+            <input type="text" id="searchPosition" name="searchPosition" class="form-control" value="@ViewData["SearchPosition"]" />
+        </div>
+        <div class="col-auto">
+            <button type="submit" class="btn btn-secondary">Найти</button>
+        </div>
+    </div>
+</form>
 <a class="btn btn-primary" asp-controller="Employees" asp-action="Create">Создать нового сотрудника</a>
 <table class="table">
     <thead>
@@ -30,4 +40,50 @@
         }
     </tbody>
 </table>
+<div class="pagination">
+    @if (Model.MetaData.HasPrevious)
+    {
+        <a class="btn btn-primary" asp-action="Index" asp-route-PageNumber="@(Model.MetaData.CurrentPage - 1)" asp-route-searchPosition="@ViewData["SearchPosition"]">Назад</a>
+    }
+
+    @if (Model.MetaData.CurrentPage > 3)
+    {
+        <a class="btn btn-primary" asp-action="Index" asp-route-PageNumber="1" asp-route-searchPosition="@ViewData["SearchPosition"]">1</a>
+        @if (Model.MetaData.CurrentPage > 4)
+        {
+            <span>...</span>
+        }
+    }
+
+    @{
+        var startPage = Math.Max(2, Model.MetaData.CurrentPage - 2);
+        var endPage = Math.Min(Model.MetaData.CurrentPage + 2, Model.MetaData.TotalPages - 1);
+    }
+
+    @for (int i = startPage; i <= endPage; i++)
+    {
+        if (i == Model.MetaData.CurrentPage)
+        {
+            <span class="btn btn-secondary disabled">@i</span>
+        }
+        else
+        {
+            <a class="btn btn-primary" asp-action="Index" asp-route-PageNumber="@i" asp-route-searchPosition="@ViewData["SearchPosition"]">@i</a>
+        }
+    }
+
+    @if (Model.MetaData.CurrentPage < Model.MetaData.TotalPages - 2)
+    {
+        @if (Model.MetaData.CurrentPage < Model.MetaData.TotalPages - 3)
+        {
+            <span>...</span>
+        }
+        <a class="btn btn-primary" asp-action="Index" asp-route-PageNumber="@Model.MetaData.TotalPages" asp-route-searchPosition="@ViewData["SearchPosition"]">@Model.MetaData.TotalPages</a>
+    }
+
+    @if (Model.MetaData.HasNext)
+    {
+        <a class="btn btn-primary" asp-action="Index" asp-route-PageNumber="@(Model.MetaData.CurrentPage + 1)" asp-route-searchPosition="@ViewData["SearchPosition"]">Вперед</a>
+    }
+</div>
 
