--- a/PerformanceRatingSystem.WebMVC/wwwroot/css/site.css
+++ b/PerformanceRatingSystem.WebMVC/wwwroot/css/site.css
@@ -20,3 +20,12 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.pagination a {
+    margin: 0 5px;
+    padding: 0.5em 1em;
+}
+
+.pagination span {
+    margin: 0 5px;
+    pad
