--- a/PerformanceRatingSystem.WebMVC/Views/Employees/Index.cshtml
+++ b/PerformanceRatingSystem.WebMVC/Views/Employees/Index.cshtml
@@ -86,4 +86,6 @@
         <a class="btn btn-primary" asp-action="Index" asp-route-PageNumber="@(Model.MetaData.CurrentPage + 1)" asp-route-searchPosition="@ViewData["SearchPosition"]">Вперед</a>
     }
 </div>
+<span class="current-page">Текущая страница: @Model.MetaData.CurrentPage из @Model.MetaData.TotalPages</span>
+
 
