--- a/PerformanceRatingSystem.WebMVC/Views/PlannedPerformanceValues/Index.cshtml
+++ b/PerformanceRatingSystem.WebMVC/Views/PlannedPerformanceValues/Index.cshtml
@@ -100,3 +100,5 @@
         <a class="btn btn-primary" asp-action="Index" asp-route-PageNumber="@(Model.MetaData.CurrentPage + 1)" asp-route-searchQuarter="@ViewData["SearchQuarter"]" asp-route-searchYear="@ViewData["SearchYear"]">Вперед</a>
     }
 </div>
+<span class="current-page">Текущая страница: @Model.MetaData.CurrentPage из @Model.MetaData.TotalPages</span>
+
