--- a/PerformanceRatingSystem.WebMVC/Views/DepartmentPerformanceIndicators/Index.cshtml
+++ b/PerformanceRatingSystem.WebMVC/Views/DepartmentPerformanceIndicators/Index.cshtml
@@ -54,8 +54,8 @@
     }
 
     @{
-        var startPage = Math.Max(2, Model.MetaData.CurrentPage - 2);
-        var endPage = Math.Min(Model.MetaData.CurrentPage + 2, Model.MetaData.TotalPages - 1);
+        var startPage = Math.Max(1, Model.MetaData.CurrentPage - 1);
+        var endPage = Math.Min(Model.MetaData.CurrentPage + 1, Model.MetaData.TotalPages );
     }
 
     @for (int i = startPage; i <= endPage; i++)
@@ -70,9 +70,9 @@
         }
     }
 
-    @if (Model.MetaData.CurrentPage < Model.MetaData.TotalPages - 2)
+    @if (Model.MetaData.CurrentPage < Model.MetaData.TotalPages - 1)
     {
-        @if (Model.MetaData.CurrentPage < Model.MetaData.TotalPages - 3)
+        @if (Model.MetaData.CurrentPage < Model.MetaData.TotalPages - 2)
         {
             <span>...</span>
         }
@@ -84,5 +84,5 @@
         <a class="btn btn-primary" asp-action="Index" asp-route-PageNumber="@(Model.MetaData.CurrentPage + 1)" asp-route-searchName="@ViewData["SearchName"]">Вперед</a>
     }
 </div>
-<span class="current-page">Текущая страница: @Model.MetaData.CurrentPage из @Model.MetaData.TotalPages</span>
+ 
 
