--- a/PerformanceRatingSystem.WebMVC/Views/PlannedPerformanceValues/Index.cshtml
+++ b/PerformanceRatingSystem.WebMVC/Views/PlannedPerformanceValues/Index.cshtml
@@ -60,18 +60,18 @@
         <a class="btn btn-primary" asp-action="Index" asp-route-PageNumber="@(Model.MetaData.CurrentPage - 1)" asp-route-searchQuarter="@ViewData["SearchQuarter"]" asp-route-searchYear="@ViewData["SearchYear"]">Назад</a>
     }
 
-    @if (Model.MetaData.CurrentPage > 3)
+    @if (Model.MetaData.CurrentPage > 2)
     {
         <a class="btn btn-primary" asp-action="Index" asp-route-PageNumber="1" asp-route-searchQuarter="@ViewData["SearchQuarter"]" asp-route-searchYear="@ViewData["SearchYear"]">1</a>
-        @if (Model.MetaData.CurrentPage > 4)
+        @if (Model.MetaData.CurrentPage > 3)
         {
             <span>...</span>
         }
     }
 
     @{
-        var startPage = Math.Max(2, Model.MetaData.CurrentPage - 2);
-        var endPage = Math.Min(Model.MetaData.CurrentPage + 2, Model.MetaData.TotalPages - 1);
+        var startPage = Math.Max(1, Model.MetaData.CurrentPage - 1);
+        var endPage = Math.Min(Model.MetaData.CurrentPage + 1, Model.MetaData.TotalPages );
     }
 
     @for (int i = startPage; i <= endPage; i++)
@@ -86,9 +86,9 @@
         }
     }
 
-    @if (Model.MetaData.CurrentPage < Model.MetaData.TotalPages - 2)
+    @if (Model.MetaData.CurrentPage < Model.MetaData.TotalPages - 1)
     {
-        @if (Model.MetaData.CurrentPage < Model.MetaData.TotalPages - 3)
+        @if (Model.MetaData.CurrentPage < Model.MetaData.TotalPages - 2)
         {
             <span>...</span>
         }
@@ -100,5 +100,5 @@
         <a class="btn btn-primary" asp-action="Index" asp-route-PageNumber="@(Model.MetaData.CurrentPage + 1)" asp-route-searchQuarter="@ViewData["SearchQuarter"]" asp-route-searchYear="@ViewData["SearchYear"]">Вперед</a>
     }
 </div>
-<span class="current-page">Текущая страница: @Model.MetaData.CurrentPage из @Model.MetaData.TotalPages</span>
+ 
 
